commit Calculator project

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <h1 class="text-center">Calculator</h1>
       </div>
     </div>
-    <div class="bg-dark text-right text-white my-3 pt-3 px-4 "><div>
+    <div class="bg-dark text-right text-white my-3 pt-3 pb-3 px-4 "><div>
         <div class="display pb-4 px-2">0</div>
        <div class="row text-center">
          <div class="col-3">
